<resources>
    <string name="app_name">EdStroke</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share your knowledge about coding with others? Or do you want to talk about your coding? Share your story with us!</string>
    <string name="title_welcome_page">Welcome to Dicoding Story!</string>
    <string name="title_signup_page">Create Account</string>
    <string name="desc_signup_page">Start Your Stroke Recovery Now: Create Your Free Account</string>
    <string name="title_login_page">Login here</string>
    <string name="desc_login_page">Welcome back you’ve been missed!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="message_login_page">Please fill the credentials.</string>
    <string name="story_name">Dicoding</string>
    <string name="story_description">Want to share your knowledge about coding with others? Or do you want to talk about your coding? Share your story with us!</string>
    <string name="message_main_page">Share your story with us.</string>
    <string name="greeting">Hi %1$s,</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
    <string name="language">Language</string>
    <string name="write_description">Write a description…</string>
    <string name="photo_preview">Photo preview</string>
    <string name="yeah">Yeah!</string>
    <string name="login_alert">You have successfully logged in.</string>
    <string name="next">Next</string>
    <string name="oops">Oops!</string>
    <string name="firebaseml_model_download_failed">Model download failed, please check your connection.</string>
    <string name="incorrect_credentials">Incorrect email or password.</string>
    <string name="signup_success">The account %1$s is ready. Come on, log in!</string>
    <string name="signup_failed">The account %1$s already exists.</string>
    <string name="ok">OK</string>
    <string name="empty_description">Description cannot be empty</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="maps">Maps</string>
    <string name="title_menu_1">Stroke Risk Prediction</string>
    <string name="desc_menu_1">Take control of your health.\nJoin us to assess stroke risk.</string>
    <string name="title_menu_2">Stroke Exercise</string>
    <string name="desc_menu_2"><![CDATA[Join to unlock personalized stroke exercise plans & expert guidance.]]></string>
    <string name="username_hint">Insert your username here</string>
    <string name="email_hint">Insert your email here</string>
    <string name="password_hint">Insert your password here</string>
    <string name="exit_confirm">Exit Confirmation</string>
    <string name="exit">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rehab_exercise">Rehab Exercise</string>
    <string name="choose_your_desired_exercise">Choose your Desired Exercise</string>
    <string name="coming_soon_exercise">Coming soon for other exercises!</string>
    <string name="mini_lunge">Mini-Lunge</string>
    <string name="repetitions_text">Repetitions: 0</string>
    <string name="shoulder_range_of_motion">Shoulder Range of Motion</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="start_camera">Start Camera</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="please_watch_the_video_first">Please watch the video first!</string>
    <string name="repetitions_needed_0">Repetitions Needed: 0</string>
    <string name="your_exercise_is_done">Your Exercise is Done!</string>
    <string name="go_back_to_our_menu_to_access_other_features">Go back to our menu to access other features.</string>
    <string name="go_home">Go Home</string>
    <string name="start_your_exercise_now">Start your Exercise Now!</string>
    <string name="day_one_let_s_go_nlog_your_workout_now">Day One, Let\'s Go! \nLog Your Workout Now.</string>
    <string name="start_exercise_click_here">Start Exercise, Click Here!</string>
    <string name="exercise_1">Exercise 1</string>
    <string name="stroke_advice">Stroke Advice</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="see_advice">See Advice</string>
    <string name="dr_boyke">Dr. Boyke</string>
</resources>